# Crewai-ShopingAgent

./: README.md  pyproject.toml
src/Shoping-agent/: shoping_agent.py
