[project]
name = "p"
version = "0.1.0"
description = "p using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
p = "p.main:run"
run_crew = "p.main:run"
train = "p.main:train"
replay = "p.main:replay"
test = "p.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
